# recon2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USAGE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
godrecon/: __init__.py  cli.py
godrecon/ai/: __init__.py  analyzer.py  scorer.py  validator.py
godrecon/api/: __init__.py  auth.py  models.py  scan_manager.py  server.py
godrecon/core/: __init__.py  campaign.py  checkpoint.py  config.py  database.py  diff.py  engine.py  plugin_sdk.py  profiles.py  rate_limiter.py  scheduler.py  scope.py  scope_config.py  stealth.py
godrecon/dashboard/: __init__.py  routes.py
godrecon/data/: cloud_patterns.json  dork_templates.json  (+5 more)
tests/: conftest.py  test_analyzer.py  test_api.py  test_campaign.py  test_checkpoint.py  test_cli.py  test_config.py  test_database.py  test_diff.py  test_engine.py  test_helpers.py  test_integration.py  test_module_api_intel.py  test_module_cloud.py  test_module_content_discovery.py  test_module_cors.py  test_module_crawl.py  test_module_dns.py  test_module_email_sec.py  test_module_favicon.py  test_module_github_dork.py  test_module_graphql.py  test_module_http.py  test_module_jwt.py  test_module_network.py  test_module_osint.py  test_module_ports.py  test_module_screenshots.py  test_module_ssl.py  test_module_subdomains.py  test_module_takeover.py  test_module_tech.py  test_module_visual.py  test_module_vulns.py  test_module_waf.py  test_module_wayback.py  test_module_whois.py  test_modules_base.py  test_plugin_sdk.py  test_profiles.py  (+9 more)
wordlists/: directories.txt  subdomains-medium.txt  subdomains-small.txt
(+162 files in other folders)
