[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godrecon"
version = "0.2.0"
description = "The Ultimate Cybersecurity Reconnaissance Tool — async-first, modular, extensible"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "nothingmch69tester2mail69-afk"}
]
keywords = ["cybersecurity", "reconnaissance", "pentesting", "subdomain", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiodns>=3.1.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "mmh3>=4.1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
screenshots = ["playwright>=1.40.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0"]

[project.scripts]
godrecon = "godrecon.cli:app"

[project.urls]
Homepage = "https://github.com/nothingmch69tester2mail69-afk/recon"
Repository = "https://github.com/nothingmch69tester2mail69-afk/recon"
Issues = "https://github.com/nothingmch69tester2mail69-afk/recon/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
